// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroPortfolio renders correctly with all props 1`] = `
.c15 {
  width: 100%;
  height: 1rem;
  border-radius: 50%;
  background: linear-gradient(     90deg,     #1a1a2e 25%,     #252540 50%,     #1a1a2e 75%   );
  background-size: 200% 100%;
  animation: k0 1.5s ease-in-out infinite;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c10 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c16 {
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  height: 100%;
}

.c11 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: #3b82f6;
}

.c11:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c8 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 6rem 0;
}

.c3 {
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c4 {
  flex: 1;
  text-align: center;
}

.c5 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: #a0a0b0;
  margin: 0 0 1rem;
}

.c6 {
  margin: 0 0 1rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  color: #3b82f6;
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c9 {
  max-width: 500px;
  margin: 0 auto 2rem;
  line-height: 1.6;
}

.c12 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: #1d4ed8;
  color: #ffffff;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c12:hover {
  opacity: 0.85;
}

.c12:focus-visible {
  outline: 2px solid #ffffff;
  outline-offset: 3px;
}

.c13 {
  display: inline-block;
  padding: 0.875rem 2rem;
  border: 2px solid #3b82f6;
  color: #3b82f6;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: all 0.2s ease;
}

.c13:hover {
  background: #3b82f6;
  color: #ffffff;
}

.c13:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 3px;
}

.c14 {
  position: relative;
  width: 240px;
  height: 240px;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  border: 3px solid #3b82f6;
}

.c17 {
  opacity: 0;
  transition: opacity 0.4s ease;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c3 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c9 {
    margin: 0 0 2rem;
  }
}

@media (min-width: 1200px) {
  .c14 {
    width: 380px;
    height: 380px;
  }
}

@keyframes k0 {
  0% {
    background-position: -200% 0;
  }

  100% {
    background-position: 200% 0;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
          >
            Hi, I'm
          </p>
          <h1
            class="c6"
          >
            Andrea Agostini
          </h1>
          <p
            class="c7"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c8 c9"
            variant="large"
          >
            Building ecommerce experiences with React, Next.js, TypeScript and Shopify. Based in Bangkok 🇹🇭, working remotely.
          </p>
          <div
            class="c10"
          >
            <a
              class="c11 c12"
              href="#projects"
            >
              View Projects
            </a>
            <a
              class="c11 c13"
              href="mailto:test@test.com"
            >
              Get in touch
            </a>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative; width: 240px; height: 240px; flex-shrink: 0; border-radius: 50%; overflow: hidden;"
        >
          <div
            aria-hidden="true"
            class="c15"
            style="position: absolute; inset: 0; width: 100%; height: 100%;"
          />
          <figure
            class="c16 c17"
          >
            <img
              alt="Andrea Agostini"
              class="c17"
              sizes="(max-width: 1200px) 240px, 380px"
              src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
              style="object-fit: cover;"
            />
          </figure>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`HeroPortfolio renders correctly without secondary CTA 1`] = `
.c14 {
  width: 100%;
  height: 1rem;
  border-radius: 50%;
  background: linear-gradient(     90deg,     #1a1a2e 25%,     #252540 50%,     #1a1a2e 75%   );
  background-size: 200% 100%;
  animation: k0 1.5s ease-in-out infinite;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
}

.c10 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c15 {
  margin: 0;
  padding: 0;
  position: relative;
  width: 100%;
  height: 100%;
}

.c11 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c11:hover {
  color: #3b82f6;
}

.c11:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c8 {
  color: #a0a0b0;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 6rem 0;
}

.c3 {
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c4 {
  flex: 1;
  text-align: center;
}

.c5 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: #a0a0b0;
  margin: 0 0 1rem;
}

.c6 {
  margin: 0 0 1rem;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 400;
  color: #3b82f6;
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c9 {
  max-width: 500px;
  margin: 0 auto 2rem;
  line-height: 1.6;
}

.c12 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: #1d4ed8;
  color: #ffffff;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c12:hover {
  opacity: 0.85;
}

.c12:focus-visible {
  outline: 2px solid #ffffff;
  outline-offset: 3px;
}

.c13 {
  position: relative;
  width: 240px;
  height: 240px;
  flex-shrink: 0;
  border-radius: 50%;
  overflow: hidden;
  border: 3px solid #3b82f6;
}

.c16 {
  opacity: 0;
  transition: opacity 0.4s ease;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c10 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c10 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c3 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c9 {
    margin: 0 0 2rem;
  }
}

@media (min-width: 1200px) {
  .c13 {
    width: 380px;
    height: 380px;
  }
}

@keyframes k0 {
  0% {
    background-position: -200% 0;
  }

  100% {
    background-position: 200% 0;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
          >
            Hi, I'm
          </p>
          <h1
            class="c6"
          >
            Andrea Agostini
          </h1>
          <p
            class="c7"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c8 c9"
            variant="large"
          >
            Building ecommerce experiences with React, Next.js, TypeScript and Shopify. Based in Bangkok 🇹🇭, working remotely.
          </p>
          <div
            class="c10"
          >
            <a
              class="c11 c12"
              href="#projects"
            >
              View Projects
            </a>
          </div>
        </div>
        <div
          class="c13"
          style="position: relative; width: 240px; height: 240px; flex-shrink: 0; border-radius: 50%; overflow: hidden;"
        >
          <div
            aria-hidden="true"
            class="c14"
            style="position: absolute; inset: 0; width: 100%; height: 100%;"
          />
          <figure
            class="c15 c16"
          >
            <img
              alt="Andrea Agostini"
              class="c16"
              sizes="(max-width: 1200px) 240px, 380px"
              src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
              style="object-fit: cover;"
            />
          </figure>
        </div>
      </div>
    </section>
  </section>
</div>
`;
